@@ -5,6 +5,7 @@
 
 int Py_XBMC_Event_OnPlayBackStarted(void* arg);
 int Py_XBMC_Event_OnPlayBackEnded(void* arg);
+int Py_XBMC_Event_OnPlayBackStopped(void* arg);
 
 class CPythonPlayer : public IPlayerCallback
 {
@@ -14,6 +15,7 @@ public:
 	void		SetCallback(PyObject *object);
 	void		OnPlayBackStarted();
 	void		OnPlayBackEnded();
+ 	void		OnPlayBackStopped();
 
 protected:
 	PyObject*		pCallback;
